--- a/backend/package.json
+++ b/backend/package.json
@@ -13,22 +13,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongodb": "^6.1.0",
     "multer": "^1.4.5-lts.1",
-    "zod": "^3.22.2",    
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.18",
-    "@types/jsonwebtoken": "^9.0.3",
+    "swagger-ui-express": "^5.0.0",
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.3"
+    "vitest": "^0.34.3",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.4"
   }
 }
